--- a/config/aliases/aliases_ui.cfg
+++ b/config/aliases/aliases_ui.cfg
@@ -68,8 +68,8 @@ alias "fin_toggleinspect_off" "-fin_desubtick_lookatweapon;   alias fin_togglein
 
 echoln "[aliases_ui.cfg] {8} Registering screen blocker aliases";
 alias "fin_blockscreen" "fin_blockscreen_off";
-alias "fin_blockscreen_on"  "cl_crosshairdot true;  multvar cl_crosshairsize 0 99999999999 1000;  multvar cl_crosshairthickness 0 99999999999 1000;  alias fin_task9 fin_nothing;           alias fin_blockscreen fin_blockscreen_off";
-alias "fin_blockscreen_off" "cl_crosshairdot false; multvar cl_crosshairsize 0 99999999999 0.001; multvar cl_crosshairthickness 0 99999999999 0.001; alias fin_task9 fin_rainbow_crosshair; alias fin_blockscreen fin_blockscreen_on";
+alias "fin_blockscreen_on"  "cl_crosshairdot true;  multvar cl_crosshairsize 0 99999999999 1000;  multvar cl_crosshairthickness 0 99999999999 1000;  alias fin_blockscreen fin_blockscreen_off";
+alias "fin_blockscreen_off" "cl_crosshairdot false; multvar cl_crosshairsize 0 99999999999 0.001; multvar cl_crosshairthickness 0 99999999999 0.001; alias fin_blockscreen fin_blockscreen_on";
 
 
 
