--- a/config/defensive_values/defensive_values_6.cfg
+++ b/config/defensive_values/defensive_values_6.cfg
@@ -2,35 +2,107 @@ echoln "[defensive_values_6.cfg] Start of defensive_values_6.cfg";
 
 
 
-echoln "[defensive_values_6.cfg] {1} Fetching remaining defensive boolean convars";
-incrementvar "sv_clip_penetration_traces_to_players"                "-18446744073709552000" "18446744073709552000" "0";
-incrementvar "sv_disable_reliable_delta_retransmit"                 "-18446744073709552000" "18446744073709552000" "0";
-incrementvar "sv_fistpunch_impact_sounds"                           "-18446744073709552000" "18446744073709552000" "0";
-incrementvar "sv_mute_players_with_social_penalties"                "-18446744073709552000" "18446744073709552000" "0";
-incrementvar "sv_phys_animated_hierarchy"                           "-18446744073709552000" "18446744073709552000" "0";
-incrementvar "sv_rcon_log"                                          "-18446744073709552000" "18446744073709552000" "0";
-incrementvar "sv_reserve_slots_for_reconnecting_players_kick_prior" "-18446744073709552000" "18446744073709552000" "0";
-incrementvar "sv_runcmds"                                           "-18446744073709552000" "18446744073709552000" "0";
-incrementvar "sv_stats"                                             "-18446744073709552000" "18446744073709552000" "0";
-incrementvar "sv_usenetworkvars"                                    "-18446744073709552000" "18446744073709552000" "0";
-incrementvar "sv_vote_issue_changelevel_allowed"                    "-18446744073709552000" "18446744073709552000" "0";
-incrementvar "sv_vote_issue_matchready_allowed"                     "-18446744073709552000" "18446744073709552000" "0";
-incrementvar "sv_vote_issue_nextlevel_allowed"                      "-18446744073709552000" "18446744073709552000" "0";
-incrementvar "sv_vote_issue_nextlevel_allowextend"                  "-18446744073709552000" "18446744073709552000" "0";
-incrementvar "sv_vote_issue_nextlevel_choicesmode"                  "-18446744073709552000" "18446744073709552000" "0";
-incrementvar "sv_vote_issue_nextlevel_prevent_change"               "-18446744073709552000" "18446744073709552000" "0";
-incrementvar "sv_vote_issue_pause_match_allowed"                    "-18446744073709552000" "18446744073709552000" "0";
-incrementvar "sv_vote_issue_surrrender_allowed"                     "-18446744073709552000" "18446744073709552000" "0";
-incrementvar "sv_vote_issue_timeout_allowed"                        "-18446744073709552000" "18446744073709552000" "0";
-incrementvar "sys_minidumpexpandedspew"                             "-18446744073709552000" "18446744073709552000" "0";
-incrementvar "target_scan_use_query_cache"                          "-18446744073709552000" "18446744073709552000" "0";
-incrementvar "tv_allow_camera_man"                                  "-18446744073709552000" "18446744073709552000" "0";
-incrementvar "tv_instant_replay_full_frame"                         "-18446744073709552000" "18446744073709552000" "0";
-incrementvar "tv_relay_quit_after_game"                             "-18446744073709552000" "18446744073709552000" "0";
-incrementvar "tv_threaded_merge_entity_deltas"                      "-18446744073709552000" "18446744073709552000" "0";
-incrementvar "vis_enable"                                           "-18446744073709552000" "18446744073709552000" "0";
-incrementvar "vm_camera"                                            "-18446744073709552000" "18446744073709552000" "0";
-incrementvar "volume_fog_jitter_offset_random"                      "-18446744073709552000" "18446744073709552000" "0";
+echoln "[defensive_values_6.cfg] {1} Fetching defensive convars 501 through 600";
+incrementvar "lua_shipping_assert_on_error"                         "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "mapcyclefile"                                         "-18446744073709552000" "18446744073709552000" "0"; // Name of the .txt file used to cycle the maps on multiplayer servers
+incrementvar "markup_volume_ref_cone_angle"                         "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "mat_colcorrection_disableentities"                    "-18446744073709552000" "18446744073709552000" "0"; // Disable map color-correction entities
+incrementvar "mat_colcorrection_editor"                             "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "mat_depthbias_shadowmap"                              "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "mat_slopescaledepthbias_shadowmap"                    "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "mat_tonemap_debug"                                    "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "mat_viewportscale"                                    "-18446744073709552000" "18446744073709552000" "0"; // Scale down the main viewport (to reduce GPU impact on CPU profiling)
+incrementvar "mem_level"                                            "-18446744073709552000" "18446744073709552000" "0"; // Memory Level - Default: High
+incrementvar "mem_test_each_frame"                                  "-18446744073709552000" "18446744073709552000" "0"; // Run heap check at end of every frame
+incrementvar "mem_test_every_n_seconds"                             "-18446744073709552000" "18446744073709552000" "0"; // Run heap check at a specified interval
+incrementvar "mem_test_quiet"                                       "-18446744073709552000" "18446744073709552000" "0"; // Don't print stats when memtesting
+incrementvar "mic_listen_while_nonfocused"                          "-18446744073709552000" "18446744073709552000" "0"; // Enables the ability for the mic to remain open if the window loses focus such as when a caster tabs out to adjust settings
+incrementvar "mm_dlcs_mask_extras"                                  "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "mm_dlcs_mask_fake"                                    "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "mm_tu_string"                                         "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "mobile_fps_increase_during_hfr_animations"            "-18446744073709552000" "18446744073709552000" "0"; // MOBILE_FPS_CONTROL: If true we increase framerate limit during HFR-tagged animations and transitions.
+incrementvar "mouse_disableinput"                                   "-18446744073709552000" "18446744073709552000" "0"; // Set to disable mouse input
+incrementvar "mp_allowspectators"                                   "-18446744073709552000" "18446744073709552000" "0"; // toggles whether the server allows spectator mode or not
+incrementvar "mp_chattime"                                          "-18446744073709552000" "18446744073709552000" "0"; // amount of time players can chat after the game is over
+incrementvar "mp_fadetoblack"                                       "-18446744073709552000" "18446744073709552000" "0"; // fade a player's screen to black when he dies
+incrementvar "mp_forcerespawn"                                      "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "mp_guardian_draw_bounds"                              "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "mp_teamplay"                                          "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "mp_tournament"                                        "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "mp_tournament_whitelist"                              "-18446744073709552000" "18446744073709552000" "0"; // Specifies the item whitelist file to use.
+incrementvar "mp_usehwmmodels"                                      "-18446744073709552000" "18446744073709552000" "0"; // Enable the use of the hw morph models. (-1 = never, 1 = always, 0 = based upon GPU)
+incrementvar "mp_usehwmvcds"                                        "-18446744073709552000" "18446744073709552000" "0"; // Enable the use of the hw morph vcd(s). (-1 = never, 1 = always, 0 = based upon GPU)
+incrementvar "mp_weaponstay"                                        "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "mp_winlimit"                                          "-18446744073709552000" "18446744073709552000" "0"; // Max score one team can reach before server changes maps0
+incrementvar "multigpu_skip_semaphores"                             "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "multigpu_skip_transfers"                              "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "nav_approach_points_area_size_threshold"              "-18446744073709552000" "18446744073709552000" "0"; // Ignore nav areas with at least one side smaller than this amount during approach point calculation.
+incrementvar "nav_drag_selection_volume_zmax_offset"                "-18446744073709552000" "18446744073709552000" "0"; // The offset of the nav drag volume top from center
+incrementvar "nav_drag_selection_volume_zmin_offset"                "-18446744073709552000" "18446744073709552000" "0"; // The offset of the nav drag volume bottom from center
+incrementvar "nav_search_lattice_initial_scale"                     "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "nav_search_lattice_progressive_scale"                 "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "nav_test_pos_name"                                    "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "nav_test_pos_place"                                   "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "navnetsolve_draw_tri"                                 "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "net_async_clientconnect"                              "-18446744073709552000" "18446744073709552000" "0"; // Enable async client connect optimization
+incrementvar "net_async_job_random_sleep"                           "-18446744073709552000" "18446744073709552000" "0"; // Sleep randomly 0..net_async_job_random_sleep ms in the parallel server jobs; sleep is per job
+incrementvar "net_culloptimization"                                 "-18446744073709552000" "18446744073709552000" "0"; // Enable optimization of slow path that makes HLTV CPU consumption high in AnimGraph-using mods. Will switch to this on by default soon.
+incrementvar "net_debug_to_file"                                    "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "net_detailed_canpacket_log"                           "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "net_log_processing"                                   "-18446744073709552000" "18446744073709552000" "0"; // Log network processing
+incrementvar "net_max_message_process_count"                        "-18446744073709552000" "18446744073709552000" "0"; // Maximum number of messages to process from a client in a single frame (0 == no limit).
+incrementvar "net_max_message_queue_size"                           "-18446744073709552000" "18446744073709552000" "0"; // Maximum number of messages to allow waiting in queue after processing; exceeding this disconnects the client. 0 == no limit
+incrementvar "net_max_polymorphic_spew"                             "-18446744073709552000" "18446744073709552000" "0"; // Max polymorphic variants to spew when spewing a flattened serializer.
+incrementvar "net_p2p_listen_dedicated"                             "-18446744073709552000" "18446744073709552000" "0"; // Should dedicated server listen for new-style P2P?
+incrementvar "net_qospacketloss_percentage_threshold"               "-18446744073709552000" "18446744073709552000" "0"; // Spew a warning if packet loss percentage is above this threshold
+incrementvar "net_restrict_showmsg_socket"                          "-18446744073709552000" "18446744073709552000" "0"; // If set, only net_showmsg spew for data inbound on this socket name e.g. client, server, etc.
+incrementvar "net_showdrop"                                         "-18446744073709552000" "18446744073709552000" "0"; // Show dropped packets in console
+incrementvar "net_showeventlisteners"                               "-18446744073709552000" "18446744073709552000" "0"; // Show listening addition/removals
+incrementvar "net_showevents"                                       "-18446744073709552000" "18446744073709552000" "0"; // Dump game events to console (1=client only, 2=all).
+incrementvar "net_showmsg"                                          "-18446744073709552000" "18446744073709552000" "0"; // Show incoming message: <0|1|2|name> where 1 == all and 2 == all except net_NOP
+incrementvar "net_showoob"                                          "-18446744073709552000" "18446744073709552000" "0"; // Show connectionless UDP traffic.
+incrementvar "net_showpeaks"                                        "-18446744073709552000" "18446744073709552000" "0"; // Show messages for large packets only: <size>
+incrementvar "net_showreliable"                                     "-18446744073709552000" "18446744073709552000" "0"; // Like net_showmsg, but only spew reliable messages
+incrementvar "net_use_packet_compression"                           "-18446744073709552000" "18446744073709552000" "0"; // Compress network traffic
+incrementvar "net_usesocketsforloopback"                            "-18446744073709552000" "18446744073709552000" "0"; // Use network sockets layer even for listen server local player's packets (multiplayer only).
+incrementvar "npc_vphysics"                                         "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "npcsolve_attract_draw"                                "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "npcsolve_constraint_nav"                              "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "npcsolve_constraint_npc"                              "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "npcsolve_drag_linear"                                 "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "npcsolve_forward"                                     "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "npcsolve_forward_const"                               "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "npcsolve_forward_dist"                                "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "npcsolve_forward_margin"                              "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "npcsolve_path_close_const"                            "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "npcsolve_path_close_max_tension"                      "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "npcsolve_path_lookahead_const"                        "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "npcsolve_path_lookahead_dist"                         "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "npcsolve_path_vel_const"                              "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "npcsolve_separation"                                  "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "npcsolve_separation_const"                            "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "npcsolve_separation_dist"                             "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "npcsolve_separation_draw"                             "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "npcsolve_separation_jitter"                           "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "npcsolve_separation_r2"                               "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "panorama_2d_translate_no_comp_layer"                  "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "panorama_3dpanel_camera_inout_scale"                  "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "panorama_3dpanel_camera_inout_scale_kb"               "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "panorama_3dpanel_camera_lookat_scale"                 "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "panorama_3dpanel_camera_rotate_altitude_scale"        "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "panorama_3dpanel_camera_rotate_azimuth_scale"         "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "panorama_3dpanel_light_move_scale"                    "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "panorama_3dpanel_light_rotate_altitude_scale"         "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "panorama_3dpanel_light_rotate_azimuth_scale"          "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "panorama_3dpanel_loadout_rotate_drag"                 "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "panorama_3dpanel_loadout_rotate_frametime_multiplier" "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "panorama_3dpanel_loadout_rotate_grab_scale"           "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "panorama_3dpanel_loadout_rotate_scale"                "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "panorama_allow_texture_composition_layer_fast_path"   "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "panorama_allow_transitions"                           "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "panorama_assert_loading_panel_type"                   "-18446744073709552000" "18446744073709552000" "0"; // Force style invalidation of the entire panel subtree when adding / removing classes.
+incrementvar "panorama_box_shadow_no_comp_layer"                    "-18446744073709552000" "18446744073709552000" "0";
+incrementvar "panorama_cache_command_list_repaint_threshold"        "-18446744073709552000" "18446744073709552000" "0";
 
 
 
