--- a/config/primary/audio.cfg
+++ b/config/primary/audio.cfg
@@ -45,6 +45,7 @@ snd_mute_mvp_music_live_players "true";                         // If set, MVP m
 voice_always_sample_mic "true";                                 // For systems experiencing a hang/stall when using voice chat.
 voice_test_log_send "true";
 voice_threshold "0";
+voice_loopback "true";
 bot_chatter "off";                                              // Control how bots talk. Allowed values: 'off', 'radio', 'minimal', or 'normal'.
 // snd_mix_async "true";                                        // [developmentonly] 0: Synchronous sound mixing (for CPUs with very few threads) 1: Asynchronous sound mixing (for CPUs with many threads)
 // For snd_spatialize_lerp:
