--- a/config/primary/binds.cfg
+++ b/config/primary/binds.cfg
@@ -48,7 +48,7 @@ bind "PGUP"           "incrementvar viewmodel_fov 54 68 1;                      
 bind "NUMLOCKTOGGLE"  "                                                                     ; fin_keycontainer";                    // This is the Num lock key
 bind "KP_DIVIDE"      "                                                                     ; fin_keycontainer";                    // This is the Numpad / key
 bind "KP_MULTIPLY"    "exec ./config/utility/clear.cfg; exec ./practice.cfg;                ; fin_keycontainer";                    // This is the Numpad * key
-bind "KP_MINUS"       "condump; exec ./autoexec.cfg; fin_blockscreen_off;                   ; fin_keycontainer";                    // This is the Numpad - key
+bind "KP_MINUS"       "condump; exec ./autoexec.cfg;                                        ; fin_keycontainer";                    // This is the Numpad - key
 
 
 echoln "[binds.cfg] {4} Configuring binds for keyboard row 3";
@@ -140,8 +140,8 @@ bind "MOUSE4"         "+fin_desubtick_voicerecord;                              
 bind "MOUSE5"         "+fin_longjump;                                                       ; fin_keycontainer";                    // This is one of the side mouse buttons
 bind "MWHEELUP"       "+fin_desubtick_jump";                                                                                        // This is scrolling the mouse wheel up
 bind "MWHEELDOWN"     "+fin_desubtick_jump";                                                                                        // This is scrolling the mouse wheel down
-bind "MOUSE_X"        "fin_onmousemove; yaw";                                                                                       // This is activated whenever the mouse is moved left/right
-bind "MOUSE_Y"        "fin_onmousemove; pitch";                                                                                     // This is activated whenever the mouse is moved up/down
+bind "MOUSE_X"        "fin_mousecontainer; yaw";                                                                                    // This is activated whenever the mouse is moved left/right
+bind "MOUSE_Y"        "fin_mousecontainer; pitch";                                                                                  // This is activated whenever the mouse is moved up/down
 
 
 echoln "[binds.cfg] {9} Configuring binds for controllers";
