--- a/config/primary/debug.cfg
+++ b/config/primary/debug.cfg
@@ -2,41 +2,23 @@ echoln "[debug.cfg] Start of debug.cfg";
 
 
 
-echoln "[debug.cfg] {1} Printing debug information and saving console log";
-echoln "[debug.cfg]  ";
-fin_def_fetch;                                                  // Custom alias to fetch value of numerical/boolean defensive convars
-echoln "[debug.cfg]  ";
-sys_info;                                                       // Print system information to the console
-echoln "[debug.cfg]  ";
-demo_info;                                                      // Print version info string.
-echoln "[debug.cfg]  ";
-status;                                                         // Print connection status
-echoln "[debug.cfg]  ";
-status_json;                                                    // Print status in JSON format
-echoln "[debug.cfg]  ";
-net_status;                                                     // Shows current network status
-echoln "[debug.cfg]  ";
-tv_broadcast_status;                                            // Print out broadcast status
-echoln "[debug.cfg]  ";
-tv_status;                                                      // Show SourceTV server status.
-echoln "[debug.cfg]  ";
+echoln "[debug.cfg] {1} Gathering debug information with various unprotected commands and convars";
 demo_info;                                                      // Print information about currently playing demo.
-echoln "[debug.cfg]  ";
-soundinfo;                                                      // Describe the current sound device with an active voice list.
-echoln "[debug.cfg]  ";
+demolist;                                                       // Print demo sequence list.
+ds_workshop_listmaps;                                           // Dump workshop maps available on this server
 install_dlc_workshoptools_cvar;                                 // DLC Install Status
-echoln "[debug.cfg]  ";
+listissues;                                                     // List all the issues that can be voted on.
+logaddress_list_http;                                           // List all URIs currently receiving server logs
+mm_queue_show_stats;                                            // Display global server stat
+net_status;                                                     // Shows current network status
+send_round_backup_file_list;
+soundinfo;                                                      // Describe the current sound device with an active voice list.
+status_json;                                                    // Print status in JSON format
+status;                                                         // Print connection status
+sys_info;                                                       // Print system information to the console
 trusted_launch;                                                 // Trusted launch status
-echoln "[debug.cfg]  ";
-hostname;                                                       // Hostname for server.
-echoln "[debug.cfg]  ";
-name;
-echoln "[debug.cfg]  ";
-tv_name;                                                        // SourceTV host name
-echoln "[debug.cfg]  ";
-tv_title;                                                       // Set title for SourceTV spectator UI
-echoln "[debug.cfg]  ";
-condump;                                                        // dump the text currently in the console to condumpXX.log
+tv_broadcast_status;                                            // Print out broadcast status
+tv_status;                                                      // Show SourceTV server status.
 
 
 echoln "[debug.cfg] {2} Clearing and resetting with various defensive commands";
@@ -73,29 +55,27 @@ vprof_reset;                                                    // Reset the sta
 
 
 echoln "[debug.cfg] {3} Clearing and resetting with various cheat commands";
+//reset_gameconvars                                             // Reset game convars to default values
 cl_ent_clear_debug_overlays;                                    // Clears all debug overlays
-cl_ent_text_sticky_clear;                                       // Clears the list of names to display text debugging information about the given entity(ies) on top of the entity (See Overlay Text) Arguments: {entity_name} / {class_name} / {entity_index} / {no argument = pick what player is looking at}
-cl_script_clear_watches;                                        // Clear all watches from the game debug overlay
 cl_ent_text_clear;                                              // Hide text debugging information about the given entity(ies) on top of the entity (See Overlay Text) Arguments: {entity_name} / {class_name} / {entity_index} / {no argument = pick what player is looking at}
+cl_ent_text_sticky_clear;                                       // Clears the list of names to display text debugging information about the given entity(ies) on top of the entity (See Overlay Text) Arguments: {entity_name} / {class_name} / {entity_index} / {no argument = pick what player is looking at}
+cl_rr_reloadresponsesystems;                                    // Reload all response system scripts.
+cl_script_clear_watches;                                        // Clear all watches from the game debug overlay
+cl_script_reload_entity_code;                                   // Execute all of this entity's VScripts, replacing existing functions with the functions in the run scripts
+cl_script_reload;                                               // Reload scripts
 clear_bombs;
 ent_text_clear;                                                 // Hide text debugging information about the given entity(ies) on top of the entity (See Overlay Text) Arguments: {entity_name} / {class_name} / {entity_index} / {no argument = pick what player is looking at}
-script_clear_watches;                                           // Clear all watches from the game debug overlay
-snd_soundevent_clear_deferred;                                  // Clear the list of deferred soundevents for loading.
-snd_vmidi_flush;                                                // Purge and reload all vmidi data and files.
-//reset_gameconvars                                             // Reset game convars to default values
-cl_rr_reloadresponsesystems;                                    // Reload all response system scripts.
-cl_script_reload;                                               // Reload scripts
-cl_script_reload_code;                                          // Execute a vscript file, replacing existing functions with the functions in the run script
-cl_script_reload_entity_code;                                   // Execute all of this entity's VScripts, replacing existing functions with the functions in the run scripts
 reloadgame;                                                     // Reload the most recent saved game.
 rr_reloadresponsesystems;                                       // Reload all response system scripts.
+script_clear_watches;                                           // Clear all watches from the game debug overlay
+snd_vmidi_flush;                                                // Purge and reload all vmidi data and files.
 
 
-echoln "[debug.cfg] {4} Clearing and resetting with various unprotected commands";
-//unbindall;	                                                  // Unbind all keys.
+echoln "[debug.cfg] {5} Clearing and resetting with various unprotected commands";
 //binddefaults;                                                 // Bind all keys to their default values.
 //clear;    // hides debug data                                 // Clear console output.
 //clearall; // hides debug data                                 // Clear console output from all views.
+//unbindall;                                                    // Unbind all keys.
 mp_bot_ai_bt_clear_cache;                                       // Clears the cache for behavior tree files.
 
 
