--- a/config/primary/ui.cfg
+++ b/config/primary/ui.cfg
@@ -37,7 +37,7 @@ cl_crosshairgap "-1";                                           // Determines ho
 cl_crosshairdot "false";                                        // 0: No dot in the center of the crosshair 1: Add a static dot to the center of the crosshair
 cl_crosshair_t "false";                                         // T style crosshair
 crosshair "true";
-fin_blockscreen_on;
+//fin_blockscreen_on;
 
 
 echoln "[ui.cfg] {3} Adjusting the HUD";
