--- a/server_secrets.cfg.example
+++ b/server_secrets.cfg.example
@@ -7,6 +7,7 @@ tv_password "1b4jCV9DSp0dh68*zRram8!8^Yyp*6cT^qA";      // GOTV password for all
 password "VMSDxkF4lQpTS4tikaPxsKU4KpMi@cQcL";           // Current server access password
 sv_password "VMSDxkF4lQpTS4tikaPxsKU4KpMi@cQcL";        // Server password for entry into multiplayer games
 rcon_password "QzXKuVDrvdhaxTiwainxgvk1$JDh2G9Ir";      // remote console password.
+sv_setsteamaccount "";                                  // token\nSet game server account token to use for logging in to a persistent game server account
 
 
 
