--- a/config/aliases/aliases_init.cfg
+++ b/config/aliases/aliases_init.cfg
@@ -12,31 +12,10 @@ alias "dbg" "clear; exec ./config/primary/debug.cfg";         // Dumps extensive
 
 
 echoln "[aliases_init.cfg] {2} Registering meta utility aliases used by other aliases";
-alias "fin_keycontainer" "fin_everykey; fin_nothing; fin_scoreboard_fix"; // This will be activated upon pressing almost any key
-alias "fin_nothing"      "//";                                  // Can be used to remove most commands' console output
-alias "fin_everykey"     "";                                    // You can set this in game with: alias "fin_everykey" "commands here";
-alias "fin_onyaw"        "";
-alias "fin_onpitch"      "";
-alias "fin_onmousemove"  "";
-
-
-echoln "[aliases_init.cfg] {3} Registering rebindable pitch/yaw aliases";
-alias "fin_onyaw" "fin_onmousemove";
-alias "fin_onpitch" "fin_onmousemove";
-alias "fin_onmousemove" "fin_task1; fin_task2; fin_task3; fin_task4; fin_task5; fin_task6; fin_task7; fin_task8; fin_task9";
-
-alias "fin_task1" "fin_nothing";
-alias "fin_task2" "fin_nothing";
-alias "fin_task3" "fin_nothing";
-alias "fin_task4" "fin_nothing";
-alias "fin_task5" "fin_nothing";
-alias "fin_task6" "fin_nothing";
-alias "fin_task7" "fin_nothing";
-alias "fin_task8" "fin_nothing";
-alias "fin_task9" "fin_rainbow_crosshair";
-
-alias "fin_override_yaw"   "yaw";
-alias "fin_override_pitch" "pitch";
+alias "fin_keycontainer"   "fin_everykey; fin_nothing; fin_scoreboard_fix"; // This will be activated upon pressing almost any key
+alias "fin_nothing"        "//";                                  // Can be used to remove most commands' console output
+alias "fin_everykey"       "";                                    // You can set this in game with: alias "fin_everykey" "commands here";
+alias "fin_mousecontainer" "fin_rainbow_crosshair; fin_autoreload";
 
 
 echoln "[aliases_init.cfg] {4} Registering input state clearing aliases";
